# fuelprices-7eleven

./: LICENSE  Readme.md  build  pyproject.toml
.github/workflows/: cron_tab.yaml  release.yaml
data/: seven_eleven_locations.json  seven_eleven_petrol_spy.json
fuelprices_7eleven/: discord.py  fuel_stations.py  json_helper.py  main.py  petrol_spy.py  price_lookup.py
fuelprices_7eleven/crawler/: crawler.py
seven11fuelprices/: petrol_spy.py
seven11fuelprices/crawler/: requests.py
